--- a/FeatherPlayer/packages.config
+++ b/FeatherPlayer/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CSCore" version="1.2.1.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
+  <package id="z440.atl.core" version="3.7.0" targetFramework="net452" />
 </packages>
