--- a/FeatherPlayer/FeatherPlayer.csproj
+++ b/FeatherPlayer/FeatherPlayer.csproj
@@ -66,7 +66,10 @@
     </ApplicationDefinition>
     <Compile Include="AudioInfo.cs" />
     <Compile Include="btnMove.cs" />
-    <Compile Include="btnOpacity.cs" />
+    <Compile Include="C:\Users\Administrator\Desktop\btnOpacity.cs">
+      <Link>btnOpacity.cs</Link>
+    </Compile>
+    <Compile Include="Delay.cs" />
     <Compile Include="fButton.xaml.cs">
       <DependentUpon>fButton.xaml</DependentUpon>
     </Compile>
